# pathguard

./: .gitattributes  .gitignore  .tokeignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
pathguard/: Cargo.toml  diesel.toml
pathguard/migrations/2025-09-19-190838_init/: down.sql  up.sql
pathguard/migrations/2025-09-28-185222_user_deleted/: down.sql  up.sql
pathguard/src/: .gitignore  auth.rs  dashboard.rs  database.rs  database.sql  error.rs  files.rs  htmx.js  main.rs  override.css  proxy.rs  robots_txt.rs  schema.rs  script.js  templates.rs
pathguard/src/models/: activity.rs  group.rs  mod.rs  state.rs  user.rs
