[package]
name = "pathguard"
version = "0.1.0"
edition = "2021"
authors = ["ElnuDev <elnu@elnu.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.8"
actix-htmx = "0.3.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
awc = { version = "3.8.0" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
const_format = "0.2.34"
derive_more = "2.0.1"
diesel = { version = "2.3.2", features = ["chrono", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
maud = { version = "0.27.0", features = ["actix-web"] }
passwords = { version = "3.1.16", features = ["common-password"] }
qstring = "0.7.2"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["serde_derive"] }
thiserror = "2.0.16"
urlencoding = "2.1.3"
webformd = "0.1.3"
